--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -3,7 +3,7 @@ html, body {
   height: 100%;
   font: 10pt arial;
   margin: 0;
-  background-color: #2C2F33;
+  background-color: #2c3e50;
 }
 
 .infobox {
